--- a/web/style.css
+++ b/web/style.css
@@ -7,10 +7,8 @@ html, body {
 }
 
 .remote-container {
-    width: 100vw;
-    height: 100vh;
-    max-width: 480px;
-    max-height: 800px;
+    width: 100%;
+    height: 100%;
     margin: 0 auto;
     background-color: #393e46;
 }
