--- a/web/style.css
+++ b/web/style.css
@@ -1,9 +1,13 @@
 html, body {
-    width: 100vw;
-    height: 100vh;
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
+}
+body {
+    transform: scale(8);
+    transform-origin: top left;
 }
 
 .remote-container {
