--- a/web/style.css
+++ b/web/style.css
@@ -16,9 +16,9 @@ html, body {
 .remote-label {
     font-family: Arial, sans-serif;
     font-weight: bold;
-    font-size: 167.2px;
+    font-size: 6vh;
     color: #ffffff;
-    padding-top: 30px;
+    padding-top: 2vh;
     text-align: center;
 }
 
@@ -26,104 +26,74 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 30px;
+    padding-top: 2vh;
 }
 .power-btn { 
     background-color: #222831;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 256px;
-    height: 256px;
+    width: 18vh;
+    height: 18vh;
     border-radius: 50%;
-
 }
 .power-btn img {
-    width: 806.392px;
-    height: 806.392px;
+    width: 7vh;
+    height: 7vh;
 }
-
 
 .control-row {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 28px;
-    margin-top: 20px;
+    gap: 4vw;
+    margin-top: 2vh;
 }
 
 .volume-section, .channel-section {
     background: #222831;
-    width:  1440px;
-    height: 3200px;
-    border-radius: 1024px;
+    width: 15vw;
+    height: 55vh;
+    border-radius: 27.5vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 24px;
+    gap: 3vh;
 }
 
 .volume-label {
     font-family: Arial, sans-serif;
     font-weight: bold;
     color: #ffffff;
-    font-size: 240px;
-    padding-bottom: 5px;
-    padding-top: 5px;
+    font-size: 3.5vh;
+    padding-bottom: 1vh;
+    padding-top: 1vh;
 }
 
 .channel-label {
     font-family: Arial, sans-serif;
     font-weight: bold;
     color: #ffffff;
-    font-size: 240px;
-    padding-bottom: 5px;
-    padding-top: 5px;
+    font-size: 3.5vh;
+    padding-bottom: 1vh;
+    padding-top: 1vh;
 }
 
-
-.volume-plus-btn {
-    background-color: #393e46;
-    height: 1120px;
-    width: 1120px;
-    border-radius: 50%;
-}
-.volume-plus-btn img {
-    width: 640px;
-    height: 640px;
-}
-
-.volume-minus-btn {
-    background-color: #393e46;
-    height: 1120px;
-    width: 1120px;
-    border-radius: 50%;
-}
-.volume-minus-btn img {
-    width: 640px;
-    height: 640px;
-}
-
-.channel-up-btn {
-    background-color: #393e46;
-    height: 1120px;
-    width: 1120px;
-    border-radius: 50%;
-}
-.channel-up-btn img {
-    width: 640px;
-    height: 640px;
-}
-
+.volume-plus-btn,
+.volume-minus-btn,
+.channel-up-btn,
 .channel-down-btn {
     background-color: #393e46;
-    height: 1120px;
-    width: 1120px;
+    height: 14vh;
+    width: 14vh;
     border-radius: 50%;
 }
+.volume-plus-btn img,
+.volume-minus-btn img,
+.channel-up-btn img,
 .channel-down-btn img {
-    width: 640px;
-    height: 640px;
+    width: 6vh;
+    height: 6vh;
 }
